# data_getter

./: .dockerignore  .env  .gitignore  DockerFile  Dockerfile  README.md  anotação exp.md  compose.yaml  dump_postgres.sh  entrypoint.sh  load_postgres.sh  pyproject.toml
notebooks/Eval Senasp data/: victims_fit.Ipynb
notebooks/Senasp/: README.md
src/: SINAN_proc.Ipynb  __init__.py  clustering_met.Ipynb  clusterizing.Ipynb  data_get.Ipynb  db_structure.Ipynb  exp_analisys.Ipynb  normalize.Ipynb  stat_per_cluster.Ipynb  victims_viz.Ipynb
src/.ipynb_checkpoints/: data_get-checkpoint.Ipynb
src/dwl_utils/: README.md  SINAN_VIOL.py  __init__.py  disk100.py  disque100.py  dwl.py  ibge_age_range.py  ibge_ed_dist.py  ibge_ed_dist_pergender.py  ibge_income_dist.py  senasp.py
src/sql_utils/: README.md  __init__.py  insert.py  reed.py  utils.py
