[project]
name = "cyberchase"
version = "0.1.0"
description = ""
authors = [
    {name = "Virrann",email = "cunha.vargas.oliveira@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pandas (>=3.0.2,<4.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "requests (>=2.33.1,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "psycopg (>=3.2.9,<4.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "plotly (>=6.7.0,<7.0.0)",
    "nbformat (>=5.10.4,<6.0.0)",
    "jupyterlab (>=4.5.6,<5.0.0)",
    "tqdm (>=4.67.3,<5.0.0)"
]

[tool.poetry]
packages = [{include = "cyberchase", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.2.0,<8.0.0)"
]
